--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-joblib==1.1.0
-numpy==1.21.5
-pandas==1.4.4
-Pillow==9.4.0
-scikit_learn==1.2.2
+joblib
+numpy
+pandas
+Pillow
+scikit_learn==1.0.2
 streamlit==1.20.0
+xgboost
+matplotlib
+seaborn
